[package]
name = "solitaire-shark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.wasmgp]
path = "../wasmgp" 
