[package]
name = "wasmgp-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
convert_case = "0.6"
proc-macro2 = "1.0"
proc-macro-crate = "1.1"
quote = "1.0"
syn = { version="1.0", features=["full"] }