[package]
name = "wasmgp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
wasmgp-macros = { path = "../wasmgp-macros" }
wasmtime = "2.0"

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.wasm-ast]
git = "https://github.com/misalcedo/wasm-ast" 
features = [ "emitter" ]