[package]
name = "wasmgp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
async = ["dep:async-trait"]

[dependencies]
anyhow = "1.0"
async-trait = { version = "0.1.63", optional = true }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
wasmgp-macros = { path = "../wasmgp-macros" }
wasmtime = "5.0"

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.wasm-ast]
git = "https://github.com/bheatwole/wasm-ast" 
features = [ "emitter" ]